<?xml version="1.0" encoding="utf-8"?>
<resources>
    
<string name="app_name">Rockbox</string>
<string name="notification">Rockbox</string>
<string name="OK">OK</string>
<string name="Cancel">Cancel</string>
<string name="KbdInputTitle">Rockbox Keyboard Input</string>
<string name="YesNoTitle">Rockbox</string>
<string name="Yes">Yes</string>
<string name="No">No</string>
<string name="error_extraction">Error occured during extraction!</string>
<string name="rockbox_extracting">Rockbox is loading. Please wait...</string>
<string name="rockbox_exit">Exit</string>
<string name="rockbox_wakelock_on">Acquire WakeLock</string>
<string name="rockbox_wakelock_on_toast">Acquire WakeLock, only for some devices which are not able to play music background</string>
<string name="rockbox_wakelock_off">Release WakeLock</string>
<string name="rockbox_wakelock_off_toast">Release WakeLock</string>
<string name="rockbox_about">About</string>
<string name="rockbox_about_title">About Rockbox</string>
<string name="rockbox_about_message"><Data><![CDATA[Rockbox compiled by RCC\nRockbox-Chinese-Community\nhttp://www.rockboxcn.org/\n\n*Reproduced only indicating the Source & Author*]]></Data></string>
<string name="rockbox_vollock_on">Lock Volume</string>
<string name="rockbox_vollock_info">Input the lock-Volume (1-100)</string>
<string name="rockbox_vollock_hint1">Current value:</string>
<string name="rockbox_vollock_hint2">(Not enabled)</string>
<string name="rockbox_vollock_inputerror">Input can not be empty</string>
<string name="rockbox_vollock_toast">Only for some devices with large volume when launch the app, take effect after restart</string>
<string name="rockbox_vollock_off">Clear Lock Volume</string>
<string name="rockbox_vollock_off_toast">Lock Volume cleared</string>
<string name="rockbox_simulatebutton">Rockbox Menu</string>
<string name="rockbox_firstrun_title">First Startup</string>
<string name="rockbox_firstrun_message">First Startup Help\n\n1.Issues on much too small fonts, displaying fonts and While-Playing-Screen(WPS) is related to uncorrect theme installation. Please download correct themes( View http://www.rockboxcn.org/ for more).\n2.If Rockbox exits with white panic screen after every startup or be unable to play music on ICS (and above) device, please switch off Database Auto Update feature (long press Database--Auto Upate--No) and Gather Runtime Data (long press Database--Gather Runtime Date--No).\n\nPS: If you are unable to modify settings through application interface, please edit /sdcard/rockbox/config.cfg with text editor, delete \'gather runtime data: on.\'</string>
<string name="rockbox_preference">Preferences</string>
<string name="pre_rockbox_preference_title">Rockbox Preferences</string>
<string name="pre_rockbox_volume_control_title">Volume Control</string>
<string name="pre_rockbox_volume_lock_title">Volume Lock</string>
<string name="pre_rockbox_volume_lock_summary">Only for some devices with large volume when launch the app</string>
<string name="pre_rockbox_volume_lock_value_title">Volume Lock</string>
<string name="pre_rockbox_power_title">Power Manager</string>
<string name="pre_rockbox_wake_lock_title">Wake Lock</string>
<string name="pre_rockbox_wake_lock_summary">Only for some devices which are not able to play music background</string>
<string name="pre_rockbox_wire_setting_title">Cable Remote Control Setting</string>
<string name="pre_rockbox_drive_by_wire_title">Cable Remote Control</string>
<string name="pre_rockbox_drive_by_wire_summary">Enable Cable Remote Control</string>
<string name="pre_rockbox_drive_by_wire_exchange_title">Swap Keyset</string>
<string name="pre_rockbox_drive_by_wire_exchange_summary">Exchange the prev and next function on headset hook key</string>
<string name="pre_rockbox_wire_title">Default Headset Hook Key:</string>
<string name="pre_rockbox_wire_summary">[single quick press: pause/resume][double press: next track][long press: previous track]</string>
<string name="pre_rockbox_about_title">About Rockbox RCC Version</string>
<string name="pre_rockbox_feedback_title">Feedback</string>
<string name="pre_rockbox_rcc_title">Rockbox-Chinese-Community</string>
<string name="pre_rockbox_rcc_summary">Visit Rockbox-Chinese-Community</string>
<string name="pre_rockbox_config">Rockbox Profile</string>
<string name="pre_rockbox_backup">Backup/Restore</string>
<string name="pre_rockbox_backup_dialogMessage">Please select backup or restore</string>
<string name="pre_rockbox_backup_dialogTitle">Rockbox Profile</string>
<string name="pre_rockbox_backup_summary">Backup and restore the config.cfg file</string>
<string name="pre_rockbox_backup_backup">Backup</string>
<string name="pre_rockbox_backup_restore">Restore</string>
<string name="pre_rockbox_display">Main Interface</string>
<string name="pre_rockbox_show_titlebar">Show Notification Bar</string>
<string name="pre_rockbox_show_titlebar_summary">Needs Restart</string>
<string name="rockbox_sdcard_notfound">Sdcard does not exist</string>
<string name="rockbox_backupfile_notfound">The backup file does not exist</string>
<string name="rockbox_backup_success">Backup completed</string>
<string name="pre_rockbox_scale_settings">Scale Settings</string>
<string name="pre_rockbox_scale_mode">Fast Scale</string>
<string name="pre_rockbox_scale_mode_summary">Needs Restart</string>
<string name="pre_rockbox_keep_scale_aspect">Keep Scale Aspect Ratio</string>
<string name="pre_rockbox_keep_scale_aspect_summary">Needs Restart</string>
<!-- Rockbox initial configuration values -->
<string name="rockbox_language_file">english.lng</string>

<!-- Widget -->
<string name="appwidget_label_4x1">Rockbox (line)</string>
<string name="appwidget_label_2x2">Rockbox (square)</string>
<string name="appwidget_label_3x3">Rockbox (big square)</string>
<string name="appwidget_infoDisplay">Touch to launch app</string>

<!-- Widget configuration -->
<string name="appwidget_configure_instructions">Please chose elements to display in widget.</string>
<string name="appwidget_configure_albumart">Cover Art</string>
<string name="appwidget_configure_prev">Prev Button</string>
<string name="appwidget_configure_stop">Stop Button</string>
<string name="appwidget_configure_playpause">Play/Pause Button</string>
<string name="appwidget_configure_next">Next Button</string>
<string name="appwidget_configure_confirm">Create Widget</string>

</resources>
